2020/06/08 에러 수정 중

--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -103,10 +103,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/destination_cardView"
-            android:layout_width="362dp"
-            android:layout_height="260dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
             android:elevation="4dp"
             app:cardCornerRadius="16dp">
 
@@ -117,9 +118,11 @@
 
                 <ImageView
                     android:id="@+id/destination_image"
-                    android:layout_width="328dp"
-                    android:layout_height="140dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="135dp"
+                    android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginHorizontal="11dp"
                     android:layout_marginTop="11dp"
                     android:background="@drawable/place_image_background"
                     android:padding="20dp"
@@ -131,8 +134,8 @@
                     android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/destination_image"
-                    android:layout_marginStart="28dp"
-                    android:layout_marginTop="11dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/mapo_peacefull"
                     android:singleLine="true"
                     android:text="장소 이름 표시"
@@ -144,8 +147,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/destination_place_name"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="23dp"
+                    android:layout_marginTop="3dp"
                     android:fontFamily="@font/bm_hanna"
                     android:text="장소 주소 표시"
                     android:textColor="@color/slateGrey"
@@ -157,8 +160,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/destination_place_address"
                     android:layout_alignParentStart="true"
-                    android:layout_marginStart="27dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="23dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="11dp"
                     android:background="@drawable/destination_sub_text_background"
                     android:fontFamily="@font/bm_hanna"
                     android:paddingHorizontal="11dp"
@@ -176,7 +180,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/destination_place_address"
                     android:layout_marginStart="15dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="11dp"
                     android:layout_toEndOf="@id/destination_group_category"
                     android:background="@drawable/destination_sub_text_background"
                     android:fontFamily="@font/bm_hanna"
@@ -199,7 +204,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/destination_cardView"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="14dp"
             android:fontFamily="@font/bm_hanna"
             android:text="참여 중인 멤버"
             android:textColor="@color/slateGrey"
@@ -208,10 +213,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/destination_member_cardView"
-            android:layout_width="362dp"
-            android:layout_height="260dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/btn_gps_tracking"
             android:layout_below="@id/destination_member_text"
             android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="3dp"
             android:elevation="4dp"
             app:cardCornerRadius="16dp">
@@ -227,9 +234,10 @@
             android:id="@+id/btn_cancel_destination"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/destination_member_cardView"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_toStartOf="@id/btn_gps_tracking"
             android:background="@drawable/btn_cancel_destination_background"
             android:elevation="4dp"
@@ -241,10 +249,11 @@
             android:id="@+id/btn_gps_tracking"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/destination_member_cardView"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="6dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/btn_gps_tracking_background"
             android:elevation="4dp"
             android:padding="16dp"
