--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -44,7 +44,7 @@
                 android:layout_toEndOf="@id/select_member_address_view"
                 android:fontFamily="@font/mapo_peacefull"
                 android:singleLine="true"
-                android:text="서울시 은평구 녹번동 86-11"
+                android:text="로딩 중..."
                 android:textAlignment="textStart"
                 android:textColor="@color/eastBay"
                 android:textSize="16sp" />
@@ -59,6 +59,73 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/ice" />
+
+    <LinearLayout
+        android:id="@+id/range_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/select_member_container"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="1dp"
+        android:background="#BAFFFFFF"
+        android:orientation="horizontal"
+        android:padding="3dp"
+        android:visibility="invisible"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginStart="6dp"
+            android:background="@color/grey"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:fontFamily="@font/bm_hanna"
+            android:text="반경 500m"
+            android:textColor="@color/darkBlue"
+            android:textSize="11sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@color/skyBlue"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:fontFamily="@font/bm_hanna"
+            android:text="반경 300m"
+            android:textColor="@color/darkBlue"
+            android:textSize="11sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@color/yellow"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="6dp"
+            android:fontFamily="@font/bm_hanna"
+            android:text="반경 100m"
+            android:textColor="@color/darkBlue"
+            android:textSize="11sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/select_member_container"
