--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -292,7 +292,7 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="33dp"
-            android:layout_marginBottom="54dp"
+            android:layout_marginBottom="43dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp">
 
@@ -454,7 +454,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <com.github.ybq.android.spinkit.SpinKitView
             style="@style/SpinKitView.Wave"
